--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-black text-white">
+  <body class="bg-black text-base uppercase text-white sm:text-lg">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
