Add custom cursor

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-black text-base uppercase text-white sm:text-lg">
+  <body
+    class="cursor-none bg-black text-base uppercase text-white sm:text-lg hover:[&_*]:cursor-none"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
